--- a/nest-ecommerce/.env
+++ b/nest-ecommerce/.env
@@ -1,2 +1,4 @@
 MONGO_URI='mongodb://localhost/nestjs-ecommerce'
+MONGO_URL_TEST='mongodb://localhost/nestjs-ecommerce-tester'
 APP_SECRET='&*324200-sdahjskd2-1'
+PORT=3000
